--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,10 @@ jobs:
       - run: npm run build:prod
       - run: npm run e2e
 
+      # Test app accessibility against rulesets of Section 508
+      # (currently only tests an already-deployed version of the app)
+      - run: npm run test:a11y:ci
+
       - run:
           name: Tar & Gzip compiled app
           command: tar zcf dist.tar.gz dist/weatherman-app
