--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "prenow:publish": "npm run build:prod",
-    "now:publish": "now --platform-version 2 dist/weatherman-app"
+    "now:publish": "now --platform-version 2 dist/weatherman-app",
+    "test:a11y": "pa11y --standard Section508 http://localhost:5000",
+    "test:a11y:ci": "pa11y-ci"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +42,7 @@
     "angular-unit-test-helper": "^11.0.2",
     "codelyzer": "^6.0.0",
     "dev-norms": "1.7.1",
+    "http-server": "^0.12.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
@@ -47,6 +50,8 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "pa11y": "^5.3.0",
+    "pa11y-ci": "^2.4.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
