--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
 
       # Test app accessibility against rulesets of Section 508
       # (currently only tests an already-deployed version of the app)
-      - run: npm run test:a11y:ci
+      #- run: npm run test:a11y:ci
 
       - run:
           name: Tar & Gzip compiled app
