--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve --port 5000",
     "build": "ng build",
-    "build:prod": "ng build --prod",
+    "build:prod": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
