--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# work-in-progress files
+/wip
+
 # compiled output
 /dist
 /tmp
 /out-tsc
-/wip
+
 # Only exists if Bazel was run
 /bazel-out
 
