--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^12.11.1",
     "angular-unit-test-helper": "^11.0.2",
     "codelyzer": "^6.0.0",
+    "cross-conf-env": "^1.2.1",
     "dev-norms": "1.7.1",
     "http-server": "^0.12.3",
     "jasmine-core": "~3.6.0",
@@ -51,11 +52,19 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "npm-run-all": "^4.1.5",
+    "open-cli": "^6.0.1",
     "pa11y": "^5.3.0",
     "pa11y-ci": "^2.4.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
+  },
+  "config": {
+    "imageRepo": "mwirasz/weatherman",
+    "imageName": "weatherman",
+    "imagePort": "8080",
+    "internalContainerPort": "3000"
   }
 }
