tslint errors fixed for new spec.ts files

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "mrm-task-angular-vscode": "^1.10.0",
     "rxjs": "~6.6.0",
     "set-default-browser": "^1.1.2",
     "subsink": "^1.0.2",
@@ -42,7 +43,6 @@
     "@types/node": "^12.11.1",
     "angular-unit-test-helper": "^11.0.2",
     "codelyzer": "^6.0.0",
-    "cross-conf-env": "^1.2.1",
     "dev-norms": "1.7.1",
     "http-server": "^0.12.3",
     "jasmine-core": "~3.6.0",
