--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "city-timezones": "^1.2.0",
+    "moment-timezone": "^0.5.33",
     "rxjs": "~6.6.0",
     "set-default-browser": "^1.1.2",
     "subsink": "^1.0.2",
@@ -46,7 +48,7 @@
     "@angular/cli": "~11.2.3",
     "@angular/compiler-cli": "~11.2.4",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.7",
     "angular-unit-test-helper": "^11.0.2",
     "codelyzer": "^6.0.0",
     "cross-conf-env": "^1.2.1",
