--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,11 @@ jobs:
 
       - run: npm run lint
       - run: npm run build:prod
-      - run: npm run e2e
+
+      # - run: npm run e2e
 
       # Test app accessibility against rulesets of Section 508
-      # (currently only tests an already-deployed version of the app)
-      #- run: npm run test:a11y:ci
+      # - run: npm run test:a11y:ci
 
       - run:
           name: Tar & Gzip compiled app
